test/types/file/bradc/badfile3.good
Error: Symbol 'thisVariableDoesntExist' is not defined (badfile3.chpl:3)
