test/types/file/bradc/badfile3.chpl
var x = 2;

fwrite(thisVariableDoesntExist, x);
